--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<section class="banner" id="home">
 		<div class="textBx">
 			<h2>Hello, <b>I'm Naveen Kumar</b></h2>
-			<h3>I'm a  Web developer.</h3>
+			<h3>I'm a  Student.</h3>
 			<a href="#about" class="btn">About Me</a>
 		</div>
 	</section>
